Pipelines/Releasing/K8S_Deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helmakskubernetespoc-website
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: helmakskubernetespoc-website # Labels follow the `name: value` template
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: helmakskubernetespoc-website
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: drmueller/helmakskubernetespoc:latest
          name: helmakskubernetespoc-website
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
